--- a/index.html
+++ b/index.html
@@ -18,18 +18,75 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <p id="today"></p>
+              <p>Hello, today's date is: <p id="date"></p>
+                It is: <p id="time"></p>
+              </p>
             </div>
           </div>
         <div class="row">
             <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
-            
+            <div class="col-6">
+              <div id=scheduler>
+                <div class="hour" id="0">1:00</div>
+                <div class="hour" id="1">2:00</div>
+                <div class="hour" id="2">3:00</div>
+                <div class="hour" id="3">4:00</div>
+                <div class="hour" id="4">5:00</div>
+                <div class="hour" id="5">6:00</div>
+                <div class="hour" id="6">7:00</div>
+                <div class="hour" id="7">8:00</div>
+                <div class="hour" id="8">9:00</div>
+                <div class="hour" id="9">10:00</div>
+                <div class="hour" id="10">11:00</div>
+                <div class="hour" id="11">12:00</div>
+                <div class="hour" id="12">1:00</div>
+                <div class="hour" id="13">2:00</div>
+                <div class="hour" id="14">3:00</div>
+                <div class="hour" id="15">4:00</div>
+                <div class="hour" id="16">5:00</div>
+                <div class="hour" id="17">6:00</div>
+                <div class="hour" id="18">7:00</div>
+                <div class="hour" id="19">8:00</div>
+                <div class="hour" id="20">9:00</div>
+                <div class="hour" id="21">10:00</div>
+                <div class="hour" id="22">11:00</div>
+                <div class="hour" id="23">12:00</div>
+              </div>
+            </div>
+            <div class="col"></div>
           </div>
       </div>
+      <div class="row">
+        <div class="col">
+          <div>footer content</div>
+        </div>
+      </div>
+
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
      <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
