--- a/index.html
+++ b/index.html
@@ -12,47 +12,53 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Daily Planner</h1>
-          <p class="lead">Insert Text Here</p>
         </div>
       </div>
     <div class="container-fluid">
         <div class="row">
+          <div class="col"></div>
             <div class="col">
-              <p>Hello, today's date is: <p id="date"></p>
-                It is: <p id="time"></p>
-              </p>
+              <div class="col">
+              <strong><p>Hello, today's date is:</strong> <h2><p id="date"></p></h2>
             </div>
+            <div class="col">
+                <strong>The time is:</strong> <h2><p id="time"></p></h2>
+              </div></p>
+            </div>
+            <div class="col"></div>
           </div>
         <div class="row">
-            <div class="col">col</div>
+            <div class="col"></div>
             <div class="col-6">
+              <h4>
               <div id=scheduler>
-                <div class="hour" id="0">1:00</div>
-                <div class="hour" id="1">2:00</div>
-                <div class="hour" id="2">3:00</div>
-                <div class="hour" id="3">4:00</div>
-                <div class="hour" id="4">5:00</div>
-                <div class="hour" id="5">6:00</div>
-                <div class="hour" id="6">7:00</div>
-                <div class="hour" id="7">8:00</div>
-                <div class="hour" id="8">9:00</div>
-                <div class="hour" id="9">10:00</div>
-                <div class="hour" id="10">11:00</div>
-                <div class="hour" id="11">12:00</div>
-                <div class="hour" id="12">1:00</div>
-                <div class="hour" id="13">2:00</div>
-                <div class="hour" id="14">3:00</div>
-                <div class="hour" id="15">4:00</div>
-                <div class="hour" id="16">5:00</div>
-                <div class="hour" id="17">6:00</div>
-                <div class="hour" id="18">7:00</div>
-                <div class="hour" id="19">8:00</div>
-                <div class="hour" id="20">9:00</div>
-                <div class="hour" id="21">10:00</div>
-                <div class="hour" id="22">11:00</div>
-                <div class="hour" id="23">12:00</div>
+                <div class="hour" id="0">1:00 AM</div>
+                <div class="hour" id="1">2:00 AM </div>
+                <div class="hour" id="2">3:00 AM</div>
+                <div class="hour" id="3">4:00 AM</div>
+                <div class="hour" id="4">5:00 AM</div>
+                <div class="hour" id="5">6:00 AM</div>
+                <div class="hour" id="6">7:00 AM</div>
+                <div class="hour" id="7">8:00 AM</div>
+                <div class="hour" id="8">9:00 AM</div>
+                <div class="hour" id="9">10:00 AM</div>
+                <div class="hour" id="10">11:00 AM</div>
+                <div class="hour" id="11">12:00 PM</div>
+                <div class="hour" id="12">1:00 PM</div>
+                <div class="hour" id="13">2:00 PM</div>
+                <div class="hour" id="14">3:00 PM</div>
+                <div class="hour" id="15">4:00 PM</div>
+                <div class="hour" id="16">5:00 PM</div>
+                <div class="hour" id="17">6:00 PM</div>
+                <div class="hour" id="18">7:00 PM</div>
+                <div class="hour" id="19">8:00 PM</div>
+                <div class="hour" id="20">9:00 PM</div>
+                <div class="hour" id="21">10:00 PM</div>
+                <div class="hour" id="22">11:00 PM</div>
+                <div class="hour" id="23">12:00 PM</div>
               </div>
             </div>
+          </h4>
             <div class="col"></div>
           </div>
       </div>
@@ -62,25 +68,29 @@
         </div>
       </div>
 
-      <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
-</button>
+
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="time-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <h5 class="modal-title" id="modal-heading">Starting time:<p id="time-value"></p></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
+        </div>
+        <div class="modal-body">
+          <p>Ending time: (ex. 5:30 PM)</p>
+          
+          <input type="time" id="appt" name="appt">
+          <div class="form-group">
+            <br>
+            <label for="textarea">Event details:</label>
+            <textarea class="form-control" id="textarea" rows="3"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
@@ -92,8 +102,8 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script> 
-    <script src="/script/script.js"></script>
-    <script src="/lib/moment/moment.min.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="./lib/moment/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
