--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
           <div class="col"></div>
           <div class="col-6">
           <h4>
-            <div id=scheduler>
-              <div class="hour" id="0">1:00 AM</div>
-              <div class="hour" id="1">2:00 AM </div>
-              <div class="hour" id="2">3:00 AM</div>
-              <div class="hour" id="3">4:00 AM</div>
-              <div class="hour" id="4">5:00 AM</div>
-              <div class="hour" id="5">6:00 AM</div>
-              <div class="hour" id="6">7:00 AM</div>
-              <div class="hour" id="7">8:00 AM</div>
-              <div class="hour" id="8">9:00 AM</div>
-              <div class="hour" id="9">10:00 AM</div>
-              <div class="hour" id="10">11:00 AM</div>
-              <div class="hour" id="11">12:00 PM</div>
-              <div class="hour" id="12">1:00 PM</div>
-              <div class="hour" id="13">2:00 PM</div>
-              <div class="hour" id="14">3:00 PM</div>
-              <div class="hour" id="15">4:00 PM</div>
-              <div class="hour" id="16">5:00 PM</div>
-              <div class="hour" id="17">6:00 PM</div>
-              <div class="hour" id="18">7:00 PM</div>
-              <div class="hour" id="19">8:00 PM</div>
-              <div class="hour" id="20">9:00 PM</div>
-              <div class="hour" id="21">10:00 PM</div>
-              <div class="hour" id="22">11:00 PM</div>
-              <div class="hour" id="23">12:00 PM</div>
-            </div>
+            <div id=scheduler class="hours-container overflow-auto">
+              <div class="hour rounded" id="0">1:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="1">2:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="2">3:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="3">4:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="4">5:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="5">6:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="6">7:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="7">8:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="8">9:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="9">10:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="10">11:00 AM <p class="task-event"></p></div>
+              <div class="hour rounded" id="11">12:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="12">1:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="13">2:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="14">3:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="15">4:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="16">5:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="17">6:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="18">7:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="19">8:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="20">9:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="21">10:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="22">11:00 PM <p class="task-event"></p></div>
+              <div class="hour rounded" id="23">12:00 PM <p class="task-event"></p></div>
             </div>
           </h4>
+          </div>
         <div class="col"></div>
         </div>
     </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn save-btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
